--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    </h1><br>
 
     <p1>
-     <center><img src="image/jihaaler.jpg" width="350" height="350"></center> 
+     <center><img src="IMAGE/jihaaler.jpg" width="350" height="350"></center> 
     </p1>
 
      <style>
@@ -101,7 +101,7 @@
     <th> Social Media Account </th>
      <td>
        <a href="https://www.tiktok.com/@najihaizuan_?is_from_webapp=1&sender_device=pc"><img 
-       src="image/tiktok.png" width="100x" height="100px">
+       src="IMAGE/tiktok.png" width="100x" height="100px">
      </td>
    </tr>
 
