--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <tr>
     <th> Social Media Account </th>
      <td>
-       <a href="https://www.tiktok.com/@najihaizuan_?is_from_webapp=1&sender_device=pc"><img 
-       src="IMAGE/tiktok.png" width="100x" height="100px">
+       <a href="https://www.tiktok.com/@najihaizuan_?is_from_webapp=1&sender_device=pc">
+       <img src="IMAGE/tiktok.png" width="100x" height="100px">
      </td>
    </tr>
 
